fixed bottom scrollbar from overflowing screen

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,6 @@
 @import 'https://fonts.googleapis.com/css?family=Roboto+Mono:100';
 
 #root {
-  max-width: 100vw;
   font-family: 'Roboto Mono', monospace;
-  min-width: 1080px;
+  width: 100vw;
 }
