--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,8 +27,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  min-width: 320px;
+  min-width: 1080px;
   min-height: 100vh;
+  padding: 0;
 }
 
 h1 {
