--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -12,6 +12,6 @@
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  min-width: 100vw;
-  min-height: 100vh;
+  max-width: 100%;
+  height: 100%;
 }
