--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -2,7 +2,6 @@
   background-color: #333;
   overflow: hidden;
   place-content: top;
-  min-width: 100vw;
 }
 
 .topnav a {
